name:                hexcapt
version:             0.5.0.0
synopsis:            HEXResearch Captive Portal wannabe 
description:         Please see README.md
homepage:            https://github.com/voidlizard/hexcapt#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Dmitry Zuikov
maintainer:          dzuikov@gmail.com 
copyright:           2016 Dmitry Zuikov
category:            Network
build-type:          Custom 
cabal-version:       >=1.10

library
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src         
  exposed-modules:     Network.HEXCapt.API

  build-depends:       base >= 4.7 && < 5
                     , servant
                     , text

  default-language:    Haskell2010

executable hexcapt
  hs-source-dirs:      app, src

  main-is:             HexCaptNew.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010
  build-depends:       base
                     , hexcapt
                     , aeson
                     , async
                     , attoparsec
                     , concurrent-extra
                     , containers
                     , data-default
                     , exceptions
                     , foldl
                     , interpolatedstring-perl6
                     , lens
                     , mtl
                     , process
                     , servant
                     , servant-server
                     , stm
                     , text
                     , transformers
                     , turtle
                     , uniplate
                     , wai
                     , warp
                     , yaml


executable hexcapt-client
  hs-source-dirs:      app, src

  main-is:             HexCaptClient.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010
  build-depends:       base
                     , hexcapt
                     , aeson
                     , async
                     , attoparsec
                     , containers
                     , foldl
                     , http-client
                     , interpolatedstring-perl6
                     , lens
                     , lens-aeson                     
                     , mtl
                     , optparse-applicative
                     , servant
                     , servant-client
                     , text
                     , turtle
                     , uniplate
                     , yaml

