name:                hexcapt
version:             0.5.0.0
synopsis:            HEXResearch Captive Portal wannabe 
description:         Please see README.md
homepage:            https://github.com/voidlizard/hexcapt#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Dmitry Zuikov
maintainer:          dzuikov@gmail.com 
copyright:           2016 Dmitry Zuikov
category:            Network
build-type:          Custom 
cabal-version:       >=1.10

library
  ghc-options:         -Wall -fno-warn-unused-do-bind -Wname-shadowing
  hs-source-dirs:      src

  exposed-modules:     Network.HEXCapt.API
                     , HEXCapt.Config
                     , HEXCapt.Types
                     , System.Shell.Iptables

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , foldl
                     , interpolatedstring-perl6
                     , mtl
                     , servant
                     , text
                     , turtle
                     , uniplate 
                     , yaml

  default-language:    Haskell2010

executable hexcapt
  hs-source-dirs:      app

  other-modules:       Application.HEXCapt.Server
                     , Application.HEXCapt.Types

  main-is:             HexCapt.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010
  build-depends:       base
                     , hexcapt
                     , aeson
                     , async
                     , attoparsec
                     , bytestring
                     , concurrent-extra
                     , containers
                     , data-default
                     , digits
                     , exceptions
                     , foldl
                     , interpolatedstring-perl6
                     , lens
                     , lifted-async
                     , lifted-base
                     , monad-control
                     , mtl
                     , process
                     , servant
                     , servant-server
                     , SHA
                     , stm
                     , text
                     , transformers
                     , transformers-base
                     , turtle
                     , uniplate
                     , wai
                     , warp
                     , yaml


executable hexcapt-client
  hs-source-dirs:      app

  main-is:             HexCaptClient.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , async
                     , attoparsec
                     , containers
                     , foldl
                     , hexcapt
                     , http-client
                     , interpolatedstring-perl6
                     , lens
                     , lens-aeson                     
                     , mtl
                     , optparse-applicative
                     , servant
                     , servant-client
                     , text
                     , turtle
                     , uniplate
                     , yaml
